--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Minh-Long Do",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.15.3",
     "express": "^2.5.11",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
